Добавляет разметку и стили для секции teacher

--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -5,7 +5,8 @@
         <div class="section-teacher_biography">
             <div class="section-teacher_picture">
                 <picture>
-                    <source srcset="./images/teacher/teacher-desktop.webp 1x, ./images/teacher/teacher-desktop@2x.webp 2x"
+                    <source
+                        srcset="./images/teacher/teacher-desktop.webp 1x, ./images/teacher/teacher-desktop@2x.webp 2x"
                         media="(min-width:1280px)" type="image/webp">
                     <source srcset="./images/teacher/teacher-desktop.jpg 1x, ./images/teacher/teacher-desktop@2x.jpg 2x"
                         media="(min-width:1280px)">
