--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -68,6 +68,7 @@
   text-align: center;
   letter-spacing: 0.08em;
   color: var(--orange-color);
+  outline: 1px solid green;
 }
 .comments-list .comments-list__info {
   font-style: normal;
@@ -84,6 +85,7 @@
 }
 
 .comments-list .comments-list-icon__vk {
+  outline: 1px solid green;
   width: 30px;
   height: 30px;
   margin-top: 10px;
