teacher scss fix

--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -1,5 +1,6 @@
-<section class="teacher">
-    <h2 class="teacher">Преподаватель</h2>
+<section class="teacher section">
+  <div class="container">
+    <h2 class="teacher-main-title">Преподаватель</h2>
 
     <div>
       <img class="teacher-picture" src="images/teacher-mobile-tablet.jpg" alt="фото учителя" width="243" height="305.58">
@@ -52,5 +53,6 @@
 
       <a class="teacher-link" href="#" aria-label="ссылка на сайт">Cambrige English Entry Level Certificate</a>
     </div>
-  </section>
+  </div>
+</section>
 
