--- a/src/sass/_teacher.scss
+++ b/src/sass/_teacher.scss
@@ -1,3 +1,6 @@
-.teacher {
- @include font(800, 20px, 1.3, 0,03em);
+.teacher-main-title{
+    @include font(800, 20px, 1.3, 0.03em);
+
+    color: var(--txt-dark);
+    margin-bottom: 20px;
 }
