--- a/src/sass/layout/_choose.scss
+++ b/src/sass/layout/_choose.scss
@@ -90,12 +90,11 @@
     left: 0;
     padding: 0;
     padding-top: 70px;
-    padding-bottom: 62px;
+    padding-bottom: 70px;
     padding-left: 84px;
     padding-right: 82px;
-    // margin-left: 0;
-    // margin-right: 0;
-    // width: 1314;
+    margin: 0;
+    width: 1314px;
   }
 
   .choose-list {
@@ -124,7 +123,19 @@
   }
 
   .choose-list-text {
+    width: 356px;
+    margin-top: 10px;
     font-size: 20px;
     line-height: 28px;
+    letter-spacing: 0.08em;
+  }
+
+  .choose-list-subtitle {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 164.9%;
+    letter-spacing: 0.08em;
+    margin-bottom: 0;
   }
 }
