--- a/src/sass/layout/_choose.scss
+++ b/src/sass/layout/_choose.scss
@@ -136,6 +136,7 @@
     font-size: 20px;
     line-height: 164.9%;
     letter-spacing: 0.08em;
+    padding-top: 1px;
     margin-bottom: 0;
   }
 }
