--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -68,6 +68,16 @@
                                                 Выпуск 2015-го года, Національний університет біоресурсів
                                                 і природокористування України
                                             </p>
+                                            <p>
+                                            За короткий час занять з Оленою я опанувала граматику і 
+                                            поповнила свій зовсім пустий словниковий запас. З першого ж
+                                            заняття я зрозуміла, що знаходжуся у своїй тарілці. 
+                                            Ми з Оленою стали друзями, тому що її справді хвилювала моя
+                                            успішність. Вона стала для мене авторитетом, 
+                                            проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз
+                                            я можу похизуватись тим, що я студен ... 
+                                           <a href="#"><span>Читать дальше</span> </a> 
+                                            </p>
                                             
                                         </li>
                                         
