--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -56,11 +56,12 @@
 
 .comments .comments-list__main-foto {
   outline: 1px solid green;
-  display: block;
+  // display: block;
   text-align: center;
-  padding-bottom: -5px;
+  // padding-bottom: -5px;
 }
 .comments-list__name {
+  display: block;
   font-style: normal;
   font-weight: 800;
   font-size: 14px;
@@ -68,7 +69,7 @@
   text-align: center;
   letter-spacing: 0.08em;
   color: var(--orange-color);
-  outline: 1px solid green;
+  // outline: 1px solid green;
 }
 .comments-list .comments-list__info {
   font-style: normal;
@@ -80,13 +81,18 @@
   color: var(--grey-color);
 }
 .comments-list .comments-list__icon {
-  display: block;
-  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .comments-list .comments-list-icon__vk {
-  outline: 1px solid green;
+  // outline: 1px solid green;
   width: 30px;
   height: 30px;
   margin-top: 10px;
+  margin-right: auto;
+  margin-left: auto;
+}
+svg {
+  display: block;
 }
