обновлена папка components

--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -15,7 +15,6 @@
 
 .title,
 .title--white {
-  color: #ffffff;
   font-family: 'Montserrat', sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -35,8 +34,8 @@
   }
 }
 .title {
-  color: #111518;
+  color: var(--black-color);
 }
 .title--white {
-  color: #ffffff;
+  color: var(--white-color);
 }
