--- a/src/sass/layout/_benefits.scss
+++ b/src/sass/layout/_benefits.scss
@@ -20,7 +20,7 @@
 .benefits-list {
   position: absolute;
   width: 280px;
-  padding: 0;
+  // padding: 0;
   // margin-left: 10px;
   // margin-right: 10px;
   padding-bottom: 20px;
@@ -63,6 +63,10 @@
   }
 }
 @media screen and (min-width: 768px) {
+  .benefits-list__item::before {
+    font-size: 14px;
+    line-height: 1.214;
+  }
   .benefits {
     height: 340px;
     padding-top: 60px;
@@ -72,36 +76,68 @@
     margin-bottom: 25px;
   }
   .benefits-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -24px;
+    margin-bottom: -24px;
     // column-count: 2;
     width: 688px;
 
     padding-bottom: 26px;
     padding-top: 30px;
-    padding-left: 46px;
-    padding-right: 22px;
+    padding-left: 73px;
+    padding-right: 47px;
     &__item {
+      flex-basis: calc(100% / 2 - 24px);
+      margin-right: 24px;
+      margin-bottom: 24px;
       display: block;
       line-height: 1.428;
-      &:nth-child(1) {
-        margin-bottom: 24px;
-      }
+      // &:nth-child(1) {
+      //   margin-bottom: 24px;
+      // }
     }
   }
 }
 
 @media screen and (min-width: 1344px) {
   .benefits {
+    background-image: url('./../images/bg-discription.png');
+    background-repeat: no-repeat;
+    background-position: 118% 100%;
     height: 560px;
     padding-top: 100px;
   }
 
   .benefits-list {
     width: 1314px;
-    column-count: 3;
+    // column-count: 3;
+    padding-bottom: 60px;
+    padding-top: 70px;
+    padding-left: 114px;
+    padding-right: 112px;
+    margin-right: -40px;
+    margin-bottom: -40px;
+    &__item {
+      flex-basis: calc(100% / 3 - 40px);
+      margin-right: 40px;
+      margin-bottom: 40px;
+
+      font-size: 14px;
+      line-height: 1.714;
+    }
+  }
+  .benefits-list__item::before {
+    font-size: 20px;
+    line-height: 1.4;
   }
   .benefits-title {
     font-size: 46px;
     line-height: 1.304;
     margin-bottom: 70px;
   }
+}
+
+.test {
+  margin-top: 200px;
 }
