Add photo and style for reviews section

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,2 +1,45 @@
-<h2 class="reviews">reviews</h2>
-<a class="btn" href="">Buy now</a>
+<section class="reviews">
+  <div class="container">
+    <ul class="list">
+      <li class="item">
+        <img
+          class="img"
+          src="./images/reviews/reviews-1@1x.png"
+          alt="testimonial"
+        />
+        <p class="text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </p>
+        <p class="name">Emily, Los Angeles</p>
+      </li>
+      <li class="item">
+        <img
+          class="img"
+          src="./images/reviews/reviews-2@1x.png"
+          alt="testimonial"
+        />
+        <p class="text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </p>
+        <p class="name">Rose, California</p>
+      </li>
+      <li class="item">
+        <img
+          class="img"
+          src="./images/reviews/reviews-3@1x.png"
+          alt="testimonial"
+        />
+        <p class="text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </p>
+        <p class="name">Emma, Washington</p>
+      </li>
+    </ul>
+  </div>
+</section>
