--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -86,13 +86,10 @@
 }
 
 .comments-list .comments-list-icon__vk {
-  // outline: 1px solid green;
+  outline: 1px solid green;
   width: 30px;
   height: 30px;
   margin-top: 10px;
   margin-right: auto;
   margin-left: auto;
-}
-svg {
-  display: block;
 }
