--- a/src/sass/layout/_teacher.scss
+++ b/src/sass/layout/_teacher.scss
@@ -1,80 +1,141 @@
 * {
-    padding: 0;
-    border: 0;
-    margin: 0;
-  }
+  padding: 0;
+  border: 0;
+  margin: 0;
+}
 a{
- text-decoration: none;
+text-decoration: none;
 }
 ul, 
 ol {
-  list-style: none;
+list-style: none;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .teacher_title {
-      font-family: Montserrat;
-      font-weight: 800;
-      font-size: 20px;
-      line-height: 130%;
-      letter-spacing: 0.03em;
-      color: #111518;
-      width: 279px;
-      margin-top: 39px;
-      margin-bottom: 20px; 
-    }
-    .teacher_name {
+
+@media screen and (min-width: 320px) {
+  .teacher_title {
     font-family: Montserrat;
     font-weight: 800;
     font-size: 20px;
-    line-height: 24px;
-    letter-spacing: 0.08em;
+    line-height: 130%;
+    letter-spacing: 0.03em;
     color: #111518;
-    margin-top: 21px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #B9B9B9;;
-   }
-   .teacher_list {
-     margin-top: 20px;
-   }
-   .teacher_skills {
-    display: flex; 
-    font-family: Montserrat;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 17px;
-    letter-spacing: 0.06em;
-    color: #111518;
-    margin-bottom: 24px;
-   }
-   .teacher_svg {
-   margin-right: 9px;  
-   }
-  
-   .teacher_before_line::before {
-    position: absolute;
-    display: block;
-    content: "";
-    width: 25px;
-    height: 2px;
-    background-color:#FF6B09;
-   }
-   .teacher_education {
-     padding-top: 18px;
-     font-family: Montserrat;
-     font-style: normal;
-     font-weight: 500;
-     font-size: 12px;
-     line-height: 20px;
-     color: #B9B9B9;
-   }
-   .teacher_certificate {
-    font-family: Montserrat;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 20px;
-    text-decoration-line: underline;
-    color: #FF6B09;
-    margin-top: 10px;
-   }
+    width: 279px;
+    margin-top: 39px;
+    margin-bottom: 20px; 
+  }
+  .teacher_name {
+  font-family: Montserrat;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.08em;
+  color: #111518;
+  margin-top: 21px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #B9B9B9;;
+ }
+ .teacher_list {
+   margin-top: 20px;
+ }
+ .teacher_skills {
+  display: flex; 
+  font-family: Montserrat;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.06em;
+  color: #111518;
+  margin-bottom: 24px;
+ }
+ .teacher_svg {
+ margin-right: 9px;  
+ }
+
+ .teacher_before_line::before {
+  position: absolute;
+  display: block;
+  content: "";
+  width: 25px;
+  height: 2px;
+  background-color:#FF6B09;
+ }
+ .teacher_education {
+   padding-top: 18px;
+   font-family: Montserrat;
+   font-style: normal;
+   font-weight: 500;
+   font-size: 12px;
+   line-height: 20px;
+   color: #B9B9B9;
+ }
+ .teacher_certificate {
+  font-family: Montserrat;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 20px;
+  text-decoration-line: underline;
+  color: #FF6B09;
+  padding-top: 10px;
+  padding-bottom: 50px;
+ }
+}
+@media screen and (min-width: 768px) {
+.teacher_area {
+ display: flex;
+}
+.teacher_right_side {
+ flex-direction: column;
+ width: 243px;
+ margin-right: 41px;
+}
+.teacher_left_side {
+flex-direction: column;
+}
+.teacher_title {
+font-weight: 800;
+font-size: 26px;
+line-height: 130%;
+letter-spacing: 0.03em;
+margin-top: 50px;
+margin-bottom: 30px;
+}
+.teacher_name {
+ margin-top: 112px;
+}
+.teacher_education {
+padding-top: 27px;
+}
+}
+@media screen and (min-width: 1200px) {
+  .teacher_title {
+    font-size: 46px;
+    margin-top: 130px;
+    margin-bottom: 50px;
+  }
+  .teacher_name {
+    font-size: 30px;
+    line-height: 37px;
+    margin-top: 237px;
+    padding-bottom: 15px;
+  }
+  .teacher_right_side {
+    width: 530px;
+    margin-right: 30px;
+  }
+  .teacher_skills {
+  font-size: 16px;
+  line-height: 20px;
+  }
+  .teacher_education {
+  font-size: 18px;
+  line-height: 28px;
+  }
+  .teacher_certificate {
+  display: flex;  
+  font-size: 18px;
+  line-height: 28px;
+  margin-top: 30px;
+  padding-bottom: 137px;
+  }
 }
