--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
         aria-label="логотип сайта"
         data-header-logo
         >Hell
-        <svg class="header-fire">
+        <svg class="header-fire animate__animated animate__heartBeat">
           <use href="./images/icon/sprite.svg#fire"></use>
         </svg>
         EN
@@ -52,23 +52,25 @@
         </svg>
       </button>
       <div class="header-menu-container" data-menu id="header-menu-container">
-        <ul class="header-list">
-          <li class="header-list-item">
-            <a class="header-list-link" href="#">Программа обучения</a>
-          </li>
-          <li class="header-list-item">
-            <a class="header-list-link" href="#">О нас</a>
-          </li>
-          <li class="header-list-item">
-            <a class="header-list-link" href="#">Варианты обучения</a>
-          </li>
-          <li class="header-list-item">
-            <a class="header-list-link" href="#">Контакты</a>
-          </li>
-        </ul>
-        <button class="header-consultation-btn" type="button">
-          Консультация по телефону
-        </button>
+        <div class="header-container">
+          <ul class="header-list">
+            <li class="header-list-item">
+              <a class="header-list-link" href="#">Программа обучения</a>
+            </li>
+            <li class="header-list-item">
+              <a class="header-list-link" href="#">О нас</a>
+            </li>
+            <li class="header-list-item">
+              <a class="header-list-link" href="#">Варианты обучения</a>
+            </li>
+            <li class="header-list-item">
+              <a class="header-list-link" href="#">Контакты</a>
+            </li>
+          </ul>
+          <button class="header-consultation-btn" type="button">
+            Консультация по телефону
+          </button>
+        </div>
       </div>
     </nav>
   </div>
