--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -152,7 +152,7 @@
   @extend %orange-btn;
   background-color: transparent;
 
-  width: 100%;
+  min-width: 260px;
 
   @include font($font, normal, 700, 12px, 1.25);
   text-transform: uppercase;
@@ -206,5 +206,12 @@
   @media screen and (min-width: 768px) {
     min-height: 1024px;
     padding: 159px 218px 0 218px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .header-container {
+    width: 320px;
+    margin: 0 auto;
   }
 }
