правит background-color

--- a/src/sass/layouts/_guarantee.scss
+++ b/src/sass/layouts/_guarantee.scss
@@ -1,21 +1,17 @@
 .guarantee {
   padding-top:50px;
+  .container{
+    background-color: $sec-ligth-bg;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    @media screen and (min-width: 1314px){
+      padding-top: 45px;
+      padding-bottom: 45px;
+      padding-left: 112px;
+      padding-right: 112px;
+      }
+  }
 }
-
-.guarantee-wrapper {
-background-color: $sec-ligth-bg;
-padding-top: 30px;
-padding-bottom: 30px;
-padding-left: 6px;
-
-@media screen and (min-width: 1314px){
-padding-top: 45px;
-padding-bottom: 45px;
-padding-left: 112px;
-padding-right: 112px;
-}
-}
-
 .accent-color {
   color: $orange;
 }
