--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -53,7 +53,7 @@
                                 <div class="comments__container">
                                     <ul class="comments-list list">
                                         <li class="comments-list__main-foto">
-                                            <img src="./images/comments/tonya_kucherovskaya.png" width="90" height="90" alt="фото Тоня Кучерявская">
+                                            <img class="comments-main-foto__main-foto" src="./images/comments/tonya_kucherovskaya.png" width="90" height="90" alt="фото Тоня Кучерявская">
                                         </li>
 
                                         <li class="comments-list__icon">
@@ -68,27 +68,16 @@
                                                 Выпуск 2015-го года, Національний університет біоресурсів
                                                 і природокористування України
                                             </p>
-                                            <p>
+                                            <p class="comments-list__description">
                                             За короткий час занять з Оленою я опанувала граматику і 
                                             поповнила свій зовсім пустий словниковий запас. З першого ж
                                             заняття я зрозуміла, що знаходжуся у своїй тарілці. 
                                             Ми з Оленою стали друзями, тому що її справді хвилювала моя
                                             успішність. Вона стала для мене авторитетом, 
                                             проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз
-                                            я можу похизуватись тим, що я студен ... 
+                                            я можу похизуватись тим, що я студент ... 
                                            <a href="#"><span>Читать дальше</span> </a> 
-                                            </p>
-                                            
-                                        </li>
-                                        
-                                        <li class="comments-list__item">
-                                            <h3>dfs</h3>
-                                        </li>
-                                        <li class="comments-list__item">
-                                            <h3>dfs</h3>
-                                        </li>
-                                        <li class="comments-list__item">
-                                            <h3>dfs</h3>
+                                            </p>                                            
                                         </li>
                                     </ul>
                                 </div>
