--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -53,12 +53,13 @@
   margin-top: 50px;
   margin-bottom: 20px;
 }
-
-.comments .comments-list__main-foto {
-  outline: 1px solid green;
-  // display: block;
-  text-align: center;
-  // padding-bottom: -5px;
+.comments-list {
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+}
+.comments .comments-main-foto__main-foto {
+  // outline: 1px solid green;
+  margin-right: auto;
+  margin-left: auto;
 }
 .comments-list__name {
   display: block;
@@ -68,6 +69,7 @@
   line-height: 1.214;
   text-align: center;
   letter-spacing: 0.08em;
+  margin-bottom: 10px;
   color: var(--orange-color);
   // outline: 1px solid green;
 }
@@ -79,17 +81,29 @@
   text-align: center;
   letter-spacing: 0.08em;
   color: var(--grey-color);
-}
-.comments-list .comments-list__icon {
-  margin-right: auto;
-  margin-left: auto;
+  margin-bottom: 10px;
 }
 
 .comments-list .comments-list-icon__vk {
-  outline: 1px solid green;
+  // outline: 1px solid green;
   width: 30px;
   height: 30px;
   margin-top: 10px;
+  margin-bottom: 20px;
   margin-right: auto;
   margin-left: auto;
+}
+.comments-list__description {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 20px;
+  text-align: center;
+  color: var(--mob-grey-color);
+}
+
+.comments-list__item {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 30px;
 }
