--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -16,7 +16,6 @@
   .garants .feature-list__container {
     //   outline: 1px solid teal;
     padding: 20px;
-
     background-color: var(--grey-bcg-color);
   }
 
@@ -106,4 +105,9 @@
   padding-left: 20px;
   padding-right: 20px;
   padding-bottom: 30px;
+}
+
+.comments-list__description span {
+  color: var(--orange-color);
+  text-decoration: underline;
 }
