подгоняет паддинги секции HOW

--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -1,6 +1,14 @@
 .how-we-do-it {
-  padding-top: 280px;
-  padding-bottom: 130px;
+  padding-top: 198px;
+  padding-bottom: 50px;
+  @media screen and (min-width: 768px){
+    padding-top: 201px;
+  padding-bottom: 50px;
+  }
+  @media screen and (min-width: 1314px){
+    padding-top: 280px;
+   padding-bottom: 130px;
+  }
 }
 
 .how-we-do-it-title {
