--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -108,6 +108,7 @@
 }
 
 .comments-list__description span {
+  display: inline-block;
   color: var(--orange-color);
   text-decoration: underline;
 }
