--- a/src/partials/howIItsMade.html
+++ b/src/partials/howIItsMade.html
@@ -1,6 +1,71 @@
 <section class="made">
     <div class="made-container">
-        <!-- Женя -->
-        <h2>How it's made - Женя</h2>
+
+        <p class="made-traditional made-titan">tradition and love</p>
+        <h2 class="made-header made-titan">how it’s made?</h2>
+        <div class="made-description">
+            <div class="made-box-wrapper">
+                <img class="made320"
+                    srcset="./images/howItsMade/made_320@1x.jpg 1x, ./images/howItsMade/made_320@2x.jpg 2x"
+                    src="./images/howItsMade/made_320@1x.jpg" alt="Cow" width="100%">
+                <img class="made768"
+                    srcset="./images/howItsMade/made_768@1x.jpg 1x, ./images/howItsMade/made_768@2x.jpg 2x"
+                    src="./images/howItsMade/made_768@1x.jpg" alt="Cow" width="100%">
+            </div>
+            <div class="made-discription-text">
+                <p class="made-discription-first">
+                    Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget,
+                    egestas eros.
+                    Maecenas eleifend erat at justo fringilla.
+                </p>
+                <p class="made-discription-second">
+                    Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in
+                    imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras
+                    massa nibh, tincidunt.
+
+                    Aliquam erat volutpat. Aenean accumsan.
+                </p>
+
+                <a class="discription-btn" href="#">
+                    <span class="made-text-btn">Read more</span>
+                    <span class="made-arrow-btn">&#62;</span>
+                </a>
+            </div>
+        </div>
+        <ul class="made-list">
+            <li class="made-list-item">
+                <div class="made-icon-wrapper">
+                    <img src="./images/howItsMade/icon1.png" alt="aice" width="33">
+                </div>
+                <h3 class="made-titan">721</h3>
+                <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+            <li class="made-list-item">
+                <div class="made-icon-wrapper">
+                    <img src="./images/howItsMade/icon2.png" alt="aice" width="50">
+                </div>
+                <h3 class="made-titan">16kg</h3>
+                <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+            <li class=" made-list-item">
+                <div class="made-icon-wrapper">
+                    <img src="./images/howItsMade/icon3.png" alt="aice" width="44">
+                </div>
+                <h3 class="made-titan">84</h3>
+                <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+            </li>
+
+        </ul>
+
+
+
+
+
+
+
+
+
+
+
     </div>
 </section>
