--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,10 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
-
+body{
+  font-family: 'DM Sans',
+  sans-serif;
+}
 // Стили для файла с примером HTML-фрагмента
 @import './header';
 @import './hero';
