--- a/src/sass/_howItsMade.scss
+++ b/src/sass/_howItsMade.scss
@@ -40,12 +40,14 @@ p, h1, h2, h3{
 
 }
 .made-box-wrapper{
-    margin: 0 auto;
+   margin-left: auto;
+   margin-right: auto;
     max-width: 500px;
 
 
     .made768{
         display: none;
+
     }
     @media screen and (min-width: 768px) {
         .made320{
