исправил путь к картинке

--- a/src/sass/layouts/_problems.scss
+++ b/src/sass/layouts/_problems.scss
@@ -98,7 +98,7 @@
 @media screen and (min-width: 1314px) {
   .problems {
     padding: 100px 0 282px;
-    background-image: url('./images/problems/noun_Campfire.png');
+    background-image: url('../images/problems/noun_Campfire.png');
 
     .problems-title {
       font-family: $font;
