--- a/src/partials/guarantee.html
+++ b/src/partials/guarantee.html
@@ -1,36 +1,38 @@
-<section>
-    <div>
-        <h2>Мы гарантируем</h2>
-        <ul class="guarantee-list">
-            <li>
-                <!-- <svg>
-                    <use href="./images/sprite.svg#icon-fire"></use>
-                </svg> -->
-                <p>Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном тестировании. Иначе мы вернем деньги.
-                    <span>*</span>
-                </p>
-            </li>
-            <li>
-                <!-- <svg>
-                    <use href="./images/sprite.svg#icon-fire"></use>
-                </svg> -->
-                <p>Ты научишься писать сочинения минимум на 10 баллов из 14.</p>
-                <p>В то время как 20% учеников получили за сочинение 0.</p>
-            </li>
-            <li>
-                <!-- <svg>
-                    <use href="./images/sprite.svg#icon-fire"></use>
-                </svg> -->
-                <p>Ты будешь заниматься в своем районе. Мы выберем место проведения занятий после формирования команд.
-                </p>
-            </li>
-            <li>
-                <!-- <svg>
-                    <use href="./images/sprite.svg#icon-fire"></use>
-                </svg> -->
-                <p>Команды будут сформированы, исходя из начального уровня учеников. Мы учитываем особенности каждого
-                    ученика.</p>
-            </li>
-        </ul>
+<section class="guarantee">
+    <div class="guarantee-container container">
+        <h2 class="guarantee-title">Мы гарантируем</h2>
+        <div class="guarantee-wrapper">
+            <ul class="guarantee-list">
+                <li class="guarantee-list-item">
+                    <svg class="guarantee-list-icon">
+                        <use href="./images/sprite.svg#icon-fire"></use>
+                    </svg>
+                    <p class="guarantee-list-text">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном тестировании. Иначе мы вернем деньги.
+                        <span class="guarantee-text-accent">*</span>
+                    </p>
+                </li>
+                <li class="guarantee-list-item">
+                    <svg class="guarantee-list-icon">
+                        <use href="./images/sprite.svg#icon-fire"></use>
+                    </svg>
+                    <p class="guarantee-list-text">Ты научишься писать сочинения минимум на 10 баллов из 14.</p>
+                    <strong class="guarantee-text-accent">В то время как 20% учеников получили за сочинение 0.</strong>
+                </li>
+                <li class="guarantee-list-item">
+                    <svg class="guarantee-list-icon">
+                        <use href="./images/sprite.svg#icon-fire"></use>
+                    </svg>
+                    <p class="guarantee-list-text">Ты будешь заниматься в своем районе. Мы выберем место проведения занятий после формирования команд.
+                    </p>
+                </li>
+                <li class="guarantee-list-item">
+                    <svg class="guarantee-list-icon">
+                        <use href="./images/sprite.svg#icon-fire"></use>
+                    </svg>
+                    <p class="guarantee-list-text">Команды будут сформированы, исходя из начального уровня учеников. Мы учитываем особенности каждого
+                        ученика.</p>
+                </li>
+            </ul>
+        </div>
     </div>
 </section>
