--- a/src/sass/layout/_our-program.scss
+++ b/src/sass/layout/_our-program.scss
@@ -7,9 +7,15 @@
 dl,
 dt,
 dd,
-li {
+li,
+p {
   margin: 0;
   padding: 0;
+}
+
+ul,
+ol {
+  list-style: none;
 }
 
 // img {
@@ -33,12 +39,12 @@ li {
 .our-program {
   background-image: linear-gradient(
     to bottom,
-    rgb(17, 21, 24) 87%,
-    rgb(250, 250, 250) 87%
+    rgb(17, 21, 24) 88%,
+    rgb(255, 255, 255) 88%
   );
 
   &__section-title {
-    margin-bottom: 40px;
+    margin-bottom: 43px;
     color: rgb(255, 255, 255);
     font-size: 20px;
     font-weight: 800;
@@ -47,7 +53,16 @@ li {
     text-align: center;
 
     @media screen and (min-width: 768px) {
+      margin-bottom: 52px;
+      font-size: 26px;
+      line-height: 33.8px;
       text-align: left;
+    }
+
+    @media screen and (min-width: 1314px) {
+      margin-bottom: 0;
+      font-size: 46px;
+      line-height: 59.8px;
     }
   }
 
@@ -55,38 +70,39 @@ li {
     position: relative;
     margin-left: 100px;
     margin-bottom: 50px;
-    list-style: none;
     counter-reset: section;
 
-    z-index: 1;
+    @media screen and (min-width: 768px) {
+      margin-left: 119px;
+      margin-bottom: 189px;
+    }
 
-    &::before {
-      position: absolute;
-      content: '';
-      top: 14px;
-      left: -27px;
-      width: 1px;
-      height: 92%;
-      background-color: rgb(255, 255, 255);
+    @media screen and (min-width: 1314px) {
+      display: flex;
+      margin-left: 0px;
     }
   }
 
   &__item {
     position: relative;
-    color: rgb(255, 255, 255);
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 28px;
-    letter-spacing: 0.08em;
-    text-transform: uppercase;
 
-    &:not(:first-child) {
-      margin-top: 40px;
-    }
+    &:not(:last-child)::before {
+      position: absolute;
+      content: '';
+      top: 14px;
+      left: -27px;
+      width: 1px;
+      height: 100%;
+      background-color: rgb(255, 255, 255);
 
-    &::before {
-      counter-increment: section;
-      content: counters(section, '.') ' ';
+      @media screen and (min-width: 768px) {
+        left: -56px;
+      }
+
+      @media screen and (min-width: 1314px) {
+        width: 0;
+        height: 0;
+      }
     }
 
     &::after {
@@ -98,25 +114,66 @@ li {
       height: 12px;
       border-radius: 50%;
       background-color: var(--accent-color);
+
+      @media screen and (min-width: 768px) {
+        left: -62px;
+      }
+
+      @media screen and (min-width: 1314px) {
+        width: 16px;
+        height: 16px;
+        top: -68px;
+        left: 0;
+      }
+    }
+
+    &:not(:last-child) {
+      padding-bottom: 40px;
+
+      @media screen and (min-width: 768px) {
+        padding-bottom: 30px;
+      }
+    }
+
+    @media screen and (min-width: 1314px) {
+      flex-basis: calc((100% - 4 * 30px) / 5);
+    }
+  }
+
+  &__item-term {
+    position: relative;
+    margin-bottom: 5px;
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 28px;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+
+    &::before {
+      counter-increment: section;
+      content: counters(section, '.') ' ';
+    }
+
+    @media screen and (min-width: 1314px) {
+      margin-bottom: 25px;
+      font-size: 30px;
+      text-transform: lowercase;
     }
   }
 
   &__item-title {
     position: relative;
-    margin-top: 5px;
+    margin-bottom: 5px;
     margin-left: 18px;
     color: var(--accent-color);
     font-size: 12px;
     font-weight: bold;
-    line-height: 20px;
+    line-height: 32px;
     text-transform: initial;
 
-    &:nth-child(n + 2) {
-      margin-top: 8px;
-    }
-
     &:last-of-type {
-      height: 20px;
+      height: 32px;
     }
 
     &::before {
@@ -127,16 +184,53 @@ li {
       width: 12px;
       height: 1px;
       background-color: var(--accent-color);
+
+      @media screen and (min-width: 1314px) {
+        left: -30px;
+        width: 20px;
+        height: 2px;
+      }
+
+      @media screen and (min-width: 1314px) {
+        left: -28px;
+      }
+    }
+
+    @media screen and (min-width: 1314px) {
+      margin-bottom: 10px;
+      margin-left: 28px;
+      font-size: 20px;
+      line-height: 32px;
+    }
+  }
+
+  &__sublist {
+    @media screen and (min-width: 768px) and (max-width: 1313px) {
+      display: flex;
     }
   }
 
   &__item-subtitle {
-    margin-top: 5px;
-    color: rgb(185, 185, 185);
+    width: 176px;
+    color: rgba(185, 185, 185, 0.5);
     font-size: 12px;
     font-weight: 500;
     line-height: 20px;
+    letter-spacing: 0.08em;
     text-transform: initial;
+
+    &:not(:last-child) {
+      margin-bottom: 8px;
+    }
+
+    @media screen and (min-width: 768px) {
+      margin-right: 50px;
+    }
+
+    @media screen and (min-width: 1314px) {
+      font-size: 18px;
+      line-height: 28px;
+    }
   }
 }
 
@@ -148,44 +242,103 @@ li {
     font-size: 20px;
     font-weight: 800;
     line-height: 27.2px;
+
+    @media screen and (min-width: 768px) {
+      width: 100%;
+      font-size: 26px;
+      line-height: 33.8px;
+      text-align: center;
+    }
+
+    @media screen and (min-width: 1314px) {
+      font-size: 46px;
+      line-height: 59.8px;
+      text-align: left;
+    }
   }
 
   &__list {
-    padding: 20px 14px 20px 30px;
+    padding: 28px 34px 20px 30px;
     background-color: rgb(255, 255, 255);
     box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
     letter-spacing: 0.08em;
     counter-reset: section;
+
+    @media screen and (min-width: 768px) {
+      padding: 35px 118px 25px 98px;
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    @media screen and (min-width: 1314px) {
+      padding: 70px 83px;
+    }
   }
 
   &__item {
     position: relative;
-    padding-left: 18px;
-    margin-bottom: 10px;
     color: var(--accent-color);
     font-size: 14px;
     font-weight: bold;
     line-height: 23.1px;
 
     &::before {
-      position: absolute;
+      position: static;
+      display: block;
       content: '';
-      top: 50%;
-      left: 0;
+      margin-bottom: 24px;
       width: 14px;
       height: 1px;
       background-color: var(--accent-color);
+
+      @media screen and (min-width: 768px) {
+        left: 18px;
+      }
     }
 
     &::after {
       counter-increment: section;
       content: '0' counters(section, '.');
-      line-height: 23.1px;
+      position: absolute;
+      top: -10px;
+      left: 23px;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 25px;
+
+      @media screen and (min-width: 768px) {
+        margin-bottom: 35px;
+      }
+    }
+
+    @media screen and (min-width: 768px) {
+      flex-basis: calc((100% - 1 * 20px) / 2);
+
+      &:nth-child(2n + 1) {
+        margin-right: 20px;
+      }
+      &:nth-last-child(-n + 2) {
+        margin-bottom: 0;
+      }
+    }
+
+    @media screen and (min-width: 1314px) {
+      font-size: 20px;
+      line-height: 33px;
+
+      flex-basis: calc((100% - 2 * 40px) / 3);
+
+      &:nth-child(3n + 3) {
+        margin-right: 0;
+      }
+      &:nth-last-child(-n + 3) {
+        margin-bottom: 0;
+      }
     }
   }
 
   &__descr {
-    width: 216px;
     color: rgb(17, 21, 24);
     font-size: 14px;
     font-weight: bold;
@@ -194,5 +347,19 @@ li {
     &:not(:last-child) {
       margin-bottom: 20px;
     }
+
+    @media screen and (min-width: 1314px) {
+      font-size: 20px;
+      line-height: 24px;
+    }
+  }
+}
+
+@media screen and (min-width: 1314px) {
+  .divider {
+    width: 100%;
+    border-bottom: 1px solid #ffffff;
+    padding: 0 0 100px;
+    margin-bottom: 60px;
   }
 }
