зафиксировал картинку. перепрописал путь

--- a/src/sass/layouts/_problems.scss
+++ b/src/sass/layouts/_problems.scss
@@ -98,7 +98,9 @@
 @media screen and (min-width: 1314px) {
   .problems {
     padding: 100px 0 282px;
-    background-image: url('../images/problems/noun_Campfire.png');
+    background-image: url('./../images/problems/noun_Campfire.png');
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
 
     .problems-title {
       font-family: $font;
@@ -113,6 +115,7 @@
   .features-overlay {
     max-width: 1314px;
     padding: 70px 112px 62px 114px;
+    margin-top: 70px;
 
     & .features-list {
       display: flex;
