--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,6 +19,8 @@
 @import './components/logo';
 @import './components/button';
 @import './components/section-title';
+@import './components/backdrop';
+@import './components/modal';
 
 // LAYOUT
 @import './layout/header';
