--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,5 +1,6 @@
 .request {
   &-form {
+    //filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     background-image: linear-gradient(
         rgba(17, 21, 24, 0.7),
         rgba(17, 21, 24, 0.7)
