--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -2,17 +2,17 @@
 <div class="teacher_right_side">
     <h2 class="teacher_title">Преподаватель</h2>
      <picture class="teacher_picture_img">
-        <source srcset="../images/images-teacher/teacher-desktop.webp 1x, ../images/images-teacher/teacher-desktop@2x.webp 2x" 
+        <source srcset="./images/images-teacher/teacher-desktop.webp 1x, ./images/images-teacher/teacher-desktop@2x.webp 2x" 
         media="(min-width: 1200px)" type="image/webp">
-        <source srcset="../images/images-teacher/teacher-desktop.jpg 1x, ../images/images-teacher/teacher-desktop@2x.jpg 2x" 
+        <source srcset="./images/images-teacher/teacher-desktop.jpg 1x, ./images/images-teacher/teacher-desktop@2x.jpg 2x" 
         media="(min-width: 1200px)">
-        <source srcset="../images/images-teacher/teacher-tablet.webp 1x, ../images/images-teacher/teacher-tablet@2x.webp 2x" 
+        <source srcset="./images/images-teacher/teacher-tablet.webp 1x, ./images/images-teacher/teacher-tablet@2x.webp 2x" 
         media="(min-width: 768px)" type="image/webp">
-        <source srcset="../images/images-teacher/teacher-tablet.jpg 1x, ../images/images-teacher/teacher-tablet@2x.jpg 2x" 
+        <source srcset="./images/images-teacher/teacher-tablet.jpg 1x, ./images/images-teacher/teacher-tablet@2x.jpg 2x" 
         media="(min-width: 768px)">
-        <source srcset="../images/images-teacher/teacher-mobile.webp 1x, ../images/images-teacher/teacher-mobile@2x.webp 2x" 
+        <source srcset="./images/images-teacher/teacher-mobile.webp 1x, ./images/images-teacher/teacher-mobile@2x.webp 2x" 
         media="(min-width: 320px)" type="image/webp">
-        <source srcset="../images/images-teacher/teacher-mobile.jpg 1x, ../images/images-teacher/teacher-mobile@2x.jpg 2x" 
+        <source srcset="./images/images-teacher/teacher-mobile.jpg 1x, ./images/images-teacher/teacher-mobile@2x.jpg 2x" 
         media="(min-width: 320px)"> 
     <img class="teacher_img"  src="../images/images-teacher/teacher-mobile.jpg" alt="woman in black shirt">
     </picture>
@@ -21,15 +21,15 @@
     <h2 class="teacher_name">Елена Морева</h2>
     <ul class="teacher_list">
         <li class="teacher_skills">
-           <img class="teacher_svg" src="../images/images-teacher/teacher.svg" alt="checked" width="18" height="14">
+           <img class="teacher_svg" src="./images/images-teacher/teacher.svg" alt="checked" width="18" height="14">
             Опыт подготовки учеников к ВНО - 6 лет  
         </li>
         <li class="teacher_skills">
-            <img class="teacher_svg" src="../images/images-teacher/teacher.svg" alt="checked" width="18" height="14">
+            <img class="teacher_svg" src="./images/images-teacher/teacher.svg" alt="checked" width="18" height="14">
             Собственный результат сдачи ВНО - 197 баллов 2 года подряд
         </li>
         <li class="teacher_skills">
-            <img class="teacher_svg" src="../images/images-teacher/teacher.svg" alt="checked" width="18" height="14">
+            <img class="teacher_svg" src="./images/images-teacher/teacher.svg" alt="checked" width="18" height="14">
             Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English Test)
         </li>
     </ul>
