--- a/src/sass/_doings.scss
+++ b/src/sass/_doings.scss
@@ -1,5 +1,5 @@
 .doings{
-    padding: 0 20px 50px 20px;
+    padding: 0 20px;
     text-align: center;
     }
     
@@ -54,7 +54,8 @@
         width: 20px;
         height: 2px;
         bottom: 21px;
-        left: 130px;
+        left: 50%;
+        transform: translate(-50%);
         background-color: var(--b-accent-background);
     }
     
@@ -107,8 +108,9 @@
             }
 
             .doings-list-title::after{
-                left: 157px;
                 bottom: 26px;
+                left: 50%;
+                transform: translate(-50%);
             }
 
             .doings-description{
