разметка и стили футера

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,12 +1,42 @@
 .footer-top {
   display: flex;
   @media screen and (max-width: 767px) {
+    padding-top: 30px;
+    padding-bottom: 30px;
     flex-direction: column;
     align-items: center;
   }
 
   @media screen and (min-width: 768px) {
     justify-content: space-between;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    justify-content: start;
+  }
+}
+
+.footer-top__logo {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 20px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    margin-right: 290px;
+  }
+}
+
+// .logo__desc {
+//   margin: 0;
+//   padding: 0;
+// }
+
+.footer-top__wrapper {
+  @media screen and (min-width: 768px) {
+    display: flex;
   }
 }
 
@@ -14,6 +44,7 @@
   width: 20px;
   height: 20px;
   margin-right: 10px;
+  fill: var(--accent-color);
 
   @media screen and (min-width: 768px) {
     width: 24px;
@@ -28,15 +59,23 @@
 }
 
 .footer-top__link {
+  display: flex;
+  align-items: baseline;
   font-weight: 600;
   font-size: 14px;
   line-height: 1.21;
   letter-spacing: 0.08em;
   color: #111518;
+  @media screen and (max-width: 767px) {
+    font-size: 20px;
+    line-height: 1.2;
+    margin-bottom: 30px;
+  }
 
   @media screen and (min-width: 768px) {
     font-size: 20px;
     line-height: 1.2;
+    margin-right: 24px;
   }
 
   @media screen and (min-width: 1280px) {
@@ -45,15 +84,25 @@
   }
 }
 
-// .footer-top__link-insta {
-//   &::before {
-//     content: '';
-//     width: 1px;
-//     height: 40px;
-//     margin-right: 24px;
-//     color: #111518;
-//   }
-// }
+.footer-top__link-insta {
+  display: flex;
+
+  @media screen and (max-width: 767px) {
+    justify-content: center;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    &::before {
+      content: '';
+      width: 1px;
+      height: 40px;
+      margin-right: 24px;
+
+      background-color: #b9b9b9;
+    }
+  }
+}
 
 .footer-bottom {
   background: #111518;
