--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,18 +1,29 @@
 <footer class="footer">
     <div class="container">
         <div class="footer-top">
-        <a href="" class="footer-top__logo">
-            <span>Hell</span><span></span><span>EN</span>
-            <p><span>Адский</span><span>Английский</span></p>
+        <a href="" class="footer-top__logo logo">
+            <span class="logo__first-part">Hell</span>
+                <svg class="logo__icon"> 
+                    <use href="./images/sprite.svg#icon-fire"></use>
+                </svg>
+            <span class="logo__second-part">EN</span>
+
+                <span class="logo__first-desc">Адский &nbsp;</span>
+                <span class="logo__second-desc">Английский</span>
+            
         </a>
+        <div class="footer-top__wrapper">
         <a class="footer-top__link link" href="tel:+380000000000">
             <svg class="footer-top__icon">
                 <use href="./images/sprite.svg#icon-phone"></use> 
             </svg> +38 (000) 000 00 00</a>
-        <a href="footer-top__link-insta"> <img src="./images/footer/footer-instagram.svg" alt="instagram"></a>
+        <a href="" class="footer-top__link-insta"> <img src="./images/footer/footer-instagram.svg" alt="instagram"></a>
         </div>
-       <div class="footer-bottom">
-           <p class="footer-bottom__copyright"> &#64; Все права защищены, 2019</p>
         </div>
+    </div>
+    <div class="footer-bottom">
+        <div class="container">
+        <p class="footer-bottom__copyright"> &#64; Все права защищены, 2019</p>
+    </div>
     </div>
 </footer>
