размеры и стили регестрации

--- a/src/partials/registration.html
+++ b/src/partials/registration.html
@@ -7,7 +7,7 @@
             по английскому языку
         </p>
         <p class="registration__text">Оставь заявку на участие в
-            <span class="registration__text--accent"> бесплатном занятии.</span>
+            <span class="registration__text--accent"> бесплатном занятии. <br> </span>
             С вами свяжется консультант и ответит на вопросы
         </p>
     </div>
