--- a/src/sass/layout/_registration.scss
+++ b/src/sass/layout/_registration.scss
@@ -16,6 +16,7 @@
 
   @media screen and (min-width: 1280px) {
     height: 840px;
+    padding-top: 100px;
   }
 }
 
@@ -36,7 +37,15 @@
 }
 .registration__wrapper {
   margin: 0 auto;
-  // max-width: 280px;
+  max-width: 280px;
+
+  @media screen and (min-width: 768px) {
+    max-width: 688px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    max-width: 1090px;
+  }
 }
 
 .registration__description {
