--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<!-- <section class="hero">
   <div class="container">
     <h1 class="hero-title">
       Комплексная подготовка к ВНО по английскому языку
@@ -15,4 +15,4 @@
       class="hero-img"
     />
   </div>
-</section>
+</section> -->
