--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -14,7 +14,7 @@
         media="(min-width: 320px)" type="image/webp">
         <source srcset="./images/images-teacher/teacher-mobile.jpg 1x, ./images/images-teacher/teacher-mobile@2x.jpg 2x" 
         media="(min-width: 320px)"> 
-    <img class="teacher_img"  src="../images/images-teacher/teacher-mobile.jpg" alt="woman in black shirt">
+    <img class="teacher_img"  src="./images/images-teacher/teacher-mobile.jpg" alt="woman in black shirt">
     </picture>
 </div> 
 <div class="teacher_left_side">
@@ -41,7 +41,7 @@
         В свободное время  проходит курсы от лучших университетов мира по эффективному преподаванию и методикам написания сочинений. 
     </p>
     <p class="teacher_education">
-        В числе пройденных: English Grammar and Essay Writing (Berkeley), English Grammar&Style (The University of Queesland), How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of Houston).
+        В числе пройденных: English Grammar and Essay Writing (Berkeley), English Grammar&Style (The University of Queesland), How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of Houston).
     </p>
     <a class="teacher_certificate" href="/">Cambrige English Entry Level Certificate</a>
    </div>
